[project]
name = "peerscout"
version = "2.1.0"
description = "A python package to scrape the Polkachu API for live peers, based on latency and acceptable location."
authors = [
  { name = "Matt Craven" }
]

dependencies = [
  "configargparse>=1.7.0",
  "requests>=2.32.3",
  "ipinfo>=5.1.1",
  "ping3>=4.0.8"
]

requires-python = ">=3.12,<=3.13"
license = { file = "LICENSE" }

keywords = ["scraper", "polkachu", "latency", "ipinfo"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.4",
  "behave>=1.2.6"
]

[build-system]
requires = [
  "setuptools>=75.8",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
peerscout = "peerscout.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Allow comments at the end of a line
    "D104", # Allow missing docstrings in __init__ methods
    "D203", # ignore incorrect-blank-line-before-class
    "D211", # Ignore no-blank-line-before-class
    "D213", # Ignore multi-line-summary-second-line
    "TRY003", # Allow long messages
]

[tool.ruff.lint.extend-per-file-ignores]
"src/**/*.py" = [
    "T201", # Allow print statements,
    "PLR0912", # Allow too many branches
    "C901", # Allow main to be too complex
]
"features/**/*.py" = ["ALL"]
